Moved image folder

--- a/index.html
+++ b/index.html
@@ -191,45 +191,45 @@
       </div>
       <div class="row text-center">
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/bootstrap.svg" class="tech-img">
+          <img src="./images/bootstrap.svg" class="tech-img">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/browserify-icon.svg" class="tech-img">
+          <img src="./images/browserify-icon.svg" class="tech-img">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/cSharpIcon.png" class="tech-img">
+          <img src="./images/cSharpIcon.png" class="tech-img">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/css-3.svg" class="tech-img-a">
+          <img src="./images/css-3.svg" class="tech-img-a">
         </div>
       </div>
       <br />
       <br />
       <div class="row text-center">
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/grunt.svg" class="tech-img-a">
+          <img src="./images/grunt.svg" class="tech-img-a">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/heroku.svg" class="tech-img-a">
+          <img src="./images/heroku.svg" class="tech-img-a">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/html-5.svg" class="tech-img-a">
+          <img src="./images/html-5.svg" class="tech-img-a">
         </div>
         <div class="col-sm-3 mx-auto tech-icon">
-          <img src="./img/images/javascript.svg" class="tech-img">
+          <img src="./images/javascript.svg" class="tech-img">
         </div>
       </div>
       <br />
       <br />
       <div class="row text-center tech-center">
         <div class="col-sm-4 mx-auto tech-icon">
-          <img src="./img/images/react.svg" class="tech-img">
+          <img src="./images/react.svg" class="tech-img">
         </div>
         <div class="col-sm-4 mx-auto tech-icon">
-          <img src="./img/images/sql.png" class="tech-img">
+          <img src="./images/sql.png" class="tech-img">
         </div>
         <div class="col-sm-4 mx-auto tech-icon">
-          <img src="./img/images/git-icon.svg" class="tech-img">
+          <img src="./images/git-icon.svg" class="tech-img">
         </div>
       </div>
     </div>
