--- a/index.html
+++ b/index.html
@@ -263,11 +263,10 @@
     <div class="container">
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fab fa-twitter fa-3x"></i></a></li>
-          <li><a href="#"><i class="far fa-file fa-3x"></i></a></li>
-          <li><a href="#"><i class="fab fa-github fa-3x"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram fa-3x"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
+          <li><a href="images/Resume.pdf"><i class="far fa-file fa-3x"></i></a></li>
+          <li><a href="https://github.com/croninsw"><i class="fab fa-github fa-3x"></i></a></li>
+          <li><a href="https://www.instagram.com/cronebone/?hl=en"><i class="fab fa-instagram fa-3x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/samuelcronin/"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
         </ul>
       </div>
     </div>
